--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </select>
         <button id="">Submit</button>
 
-        <!-- <p id="">The Dallas Cowboys are a professional American
+        <p id="">The Dallas Cowboys are a professional American
             football team based in Dallas, Texas, known for their
             rich history and large fan following. They are a
             prominent franchise in the NFL and have won multiple
-            Super Bowl championships.</p> -->
+            Super Bowl championships.</p>
 
 
     </main>
